# kill_gta5_when_closed_rs

./: Cargo.toml  README.md  appveyor.yml  build.rs
ci/: before_deploy.ps1
src/: main.rs  processes.rs
src/raw/: mod.rs  process.rs  window.rs
